backend documentation and frontend adjustments for password update feature (implies signup feature adjustments) : - backend: update Swagger doc / API Rest for route "/update/password" - frontend : add password regexp format (for signup and update features)
