# backend/models/user.model.mjs
@@ -2,7 +2,7 @@ import mongoose from "../db/connection.mjs";
 
 const userSchema = new mongoose.Schema (
   {
-    username: { type: String } , 
+    username: { type: String , required: false } , 
     email: { type: String , required: true , unique: true } , 
     password: { type: String , required: true } , 
     date: { type: Date , default: Date.now },
